# autoagent

./: .gitignore  README.md  pyproject.toml
.autoagent/: config.json  pipeline.py  state.json
.github/workflows/: ci.yml
.gsd/: DECISIONS.md  PROJECT.md  QUEUE.md  REQUIREMENTS.md  STATE.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M002/: M002-CONTEXT.md  M002-RESEARCH.md  M002-ROADMAP.md  M002-SUMMARY.md
.gsd/milestones/M003/: M003-CONTEXT.md  M003-RESEARCH.md  M003-ROADMAP.md  M003-SUMMARY.md
.gsd/milestones/M004/: M004-CONTEXT.md  M004-RESEARCH.md  M004-ROADMAP.md  M004-SUMMARY.md
.gsd/milestones/M005/: M005-CONTEXT.md  M005-META.json  (+3 more)
src/autoagent/: __init__.py  archive.py  benchmark.py  benchmark_gen.py  cli.py  evaluation.py  harness.py  interview.py  leakage.py  loop.py  meta_agent.py  pareto.py  pipeline.py  primitives.py  report.py  sandbox.py  state.py  strategy.py  summarizer.py  tui.py  types.py  verification.py
tests/: test_archive.py  test_benchmark.py  test_benchmark_gen.py  test_cli.py  test_cli_json_interview.py  test_cli_jsonl.py  test_end_to_end.py  test_evaluation.py  test_final_assembly.py  test_harness.py  test_interview.py  test_leakage.py  test_loop.py  test_loop_leakage.py  test_loop_sandbox.py  test_loop_strategy.py  test_loop_summarizer.py  test_loop_verification.py  test_meta_agent.py  test_pareto.py  test_pipeline_runner.py  test_primitives.py  test_report.py  test_sandbox.py  test_smoke.py  test_state.py  test_strategy.py  test_summarizer.py  test_tui.py  test_verification.py
tests/fixtures/: bad_pipeline.py  crash_pipeline.py  passthrough_pipeline.py  slow_pipeline.py  toy_benchmark.json  toy_pipeline.py  toy_scorer.py
tui/: package-lock.json  package.json  tsconfig.json
tui/pkg/: package.json
tui/src/: app-paths.ts  cli.ts  loader.ts  onboarding.ts
(+203 files in other folders)
