[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoagent"
version = "0.1.0"
description = "Autonomous optimization system that iteratively discovers better agentic architectures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "frizynn" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["agents", "optimization", "llm", "architecture-search", "meta-learning"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/frizynn/autoagent"
Repository = "https://github.com/frizynn/autoagent"
Issues = "https://github.com/frizynn/autoagent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autoagent"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
